--- a/Arkoudotsarkes/Arkoudotsarkes/Base.lproj/Main_iPhone.storyboard
+++ b/Arkoudotsarkes/Arkoudotsarkes/Base.lproj/Main_iPhone.storyboard
@@ -35,10 +35,11 @@
         <scene sceneID="1bi-Ck-UfP">
             <objects>
                 <tableViewController id="mOS-3b-ra4" customClass="ATTeamTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="J6P-j7-Un5">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="J6P-j7-Un5">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="separatorColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="XsV-ZD-vtg">
                                 <rect key="frame" x="0.0" y="22" width="320" height="44"/>
@@ -695,7 +696,7 @@
             </objects>
             <point key="canvasLocation" x="-2744" y="1928"/>
         </scene>
-        <!--Generate Image Controller - Camera-->
+        <!--Generate Image Controller - Title-->
         <scene sceneID="3eh-Id-y58">
             <objects>
                 <viewController id="ey3-UL-qLT" customClass="GenerateImageController" sceneMemberID="viewController">
@@ -739,7 +740,10 @@
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Camera" image="UIBarButtonCamera.png" id="PsQ-Pt-Zpd"/>
+                    <tabBarItem key="tabBarItem" tag="2" title="Camera" image="UIBarButtonCamera.png" id="PsQ-Pt-Zpd"/>
+                    <navigationItem key="navigationItem" title="Title" id="LKs-rP-gTA">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="oo7-FH-5UM"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="cancelBarBtn" destination="uCg-es-KJT" id="1eM-4B-nRZ"/>
                         <outlet property="imageView" destination="J41-j9-UFe" id="2Z2-Mm-on9"/>
@@ -752,7 +756,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2kg-Fv-tiq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1161" y="2036"/>
+            <point key="canvasLocation" x="-1168" y="2016"/>
         </scene>
         <!--Publish Event-->
         <scene sceneID="Is6-Pp-wPd">
@@ -764,7 +768,7 @@
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="GKC-3w-1Hu">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" id="6YO-ZL-IxY">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -825,7 +829,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oyI-Ck-SqB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-612" y="2036"/>
+            <point key="canvasLocation" x="-619" y="2016"/>
         </scene>
         <!--Tab Bar View Controller-->
         <scene sceneID="RS9-cI-E7F">
@@ -839,8 +843,10 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="uTQ-JE-xm6" kind="relationship" relationship="viewControllers" id="b8q-3s-W1m"/>
-                        <segue destination="ey3-UL-qLT" kind="relationship" relationship="viewControllers" id="AGm-Nq-Bwa"/>
+                        <outlet property="delegate" destination="wKx-sk-pFN" id="Xvt-54-MmK"/>
+                        <outlet property="tabBarItem" destination="wKx-sk-pFN" id="spc-M6-eu5"/>
+                        <segue destination="uTQ-JE-xm6" kind="relationship" relationship="viewControllers" id="fbs-7Z-wO5"/>
+                        <segue destination="ey3-UL-qLT" kind="relationship" relationship="viewControllers" id="hAV-8I-RhM"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uNx-36-RbP" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -851,7 +857,7 @@
         <scene sceneID="U9C-uq-6ck">
             <objects>
                 <tableViewController id="9BU-W9-YdA" customClass="ATTableViewEventsController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="fSP-cF-3Z4">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="fSP-cF-3Z4">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -860,7 +866,7 @@
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8v9-Y0-VZ1" id="Vnu-l2-870">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -880,7 +886,7 @@
         <scene sceneID="iFp-95-MIa">
             <objects>
                 <navigationController definesPresentationContext="YES" id="uTQ-JE-xm6" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="News Feed" image="bookmark_feed.png" id="gAj-qR-pfL"/>
+                    <tabBarItem key="tabBarItem" tag="1" title="News Feed" image="bookmark_feed.png" id="gAj-qR-pfL"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="lux-9e-Mji">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -993,6 +999,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="4CU-o7-7zr"/>
+        <segue reference="y4y-9T-ipt"/>
     </inferredMetricsTieBreakers>
 </document>
